[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["alex"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.7"
langchain-openai = "^0.1.15"
streamlit = "^1.36.0"
requests = "^2.32.3"
langchain-core = "^0.2.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
